<?xml version="1.0"?>
<package format="2">
  <name>trackit_core</name>
  <version>0.0.0</version>
  <description>The trackit_core package</description>

  <maintainer email="richardo.khonasty@uts.edu.au">Richardo Khonasty</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>track_it_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>track_it_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>track_it_msgs</exec_depend>

  <!-- Add test dependencies for rostest and gtest -->
  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
</package>
