<?xml version="1.0"?>
<package format="2">
  <name>trackit_robot_state</name>
  <version>0.0.0</version>
  <description>The trackit_robot_state package</description>

  <maintainer email="richardo.khonasty@uts.edu.au">Richardo Khonasty</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>trackit_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>trackit_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>trackit_msgs</exec_depend>
  
</package>
