<?xml version="1.0"?>
<package format="3">
  <name>trackit_core</name>
  <version>0.0.0</version>
  <description>The trackit_core package</description>

  <maintainer email="richardo.khonasty@uts.edu.au">Richardo Khonasty</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_gtest</build_depend> 

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trackit_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>