<?xml version="1.0"?>
<package format="3">
  <name>trackit_jacobian</name>
  <version>0.0.0</version>
  <description>The trackit_jacobian package</description>

  <maintainer email="richardo.khonasty@uts.edu.au">Richardo Khonasty</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>kdl_parser</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trackit_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>Boost</build_depend>

  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trackit_msgs</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>Boost</build_export_depend>
  
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trackit_msgs</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>Boost</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
