<?xml version="1.0"?>
<package format="3">
  <name>trackit_msgs</name>
  <version>0.0.0</version>
  <description>The trackit_msgs package</description>

  <maintainer email="richardo.khonasty@uts.edu.au">Richardo Khonasty</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
